searchToPageable handles null values from database as DABAS adds items